Fixed column fixes, add textWrap, collapsable fixes
- Add textWrap option to columns
- Ensure headers are equal height when using fixed tables
- Add hover class to rows by mouseenter index
- Fix bug where collapsable rows needed 2 clicks to expand
- Use Ember.set instead of = when setting rowGroup’s data

--- a/addon/styles/_justa-table.scss
+++ b/addon/styles/_justa-table.scss
@@ -14,7 +14,7 @@
     height: 36px;
   }
 
-  tr:hover {
+  tr:hover, tr.hover {
     background: #e9f7f7;
   }
 
@@ -32,6 +32,10 @@
     &.right {
       text-align: right;
     }
+  }
+
+  th.text-wrap {
+    white-space: normal;
   }
 
   table {
